fixed nav on mobile

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -515,6 +515,9 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden; }
+    @media only screen and (max-width: 56.25em) {
+      .header__waves {
+        display: none; } }
   .header__wave--1, .header__wave--2, .header__wave--3, .header__wave--4 {
     animation: waveAnimation 30s linear infinite;
     position: absolute;
@@ -545,19 +548,21 @@ body {
     position: fixed;
     top: 5.5rem;
     right: 2rem;
-    width: 6rem;
-    height: 6rem;
+    width: 5.5rem;
+    height: 5.5rem;
     z-index: 3000; }
   .navigation__toggle {
-    position: fixed;
-    top: 6.7rem;
-    right: 3.5rem;
     text-align: center;
     text-shadow: 0px 2px 4px #000;
+    width: 19.5rem;
+    height: 7rem;
+    position: fixed;
+    top: 6.6rem;
+    right: -5.1rem;
     z-index: 4000; }
     .navigation__toggle--icon {
       cursor: pointer;
-      font-size: 3.3rem;
+      font-size: 3.2rem;
       transition: all .3s; }
       .navigation__toggle--icon:hover {
         text-shadow: 0px 3px 10px #0f0f0f;
@@ -664,6 +669,9 @@ body {
     transform: translate(0, -50%);
     transition: 0.2s;
     user-select: none; }
+    @media only screen and (max-width: 25.875em) {
+      .trailer__prev, .trailer__next {
+        display: none; } }
   .trailer__next {
     border-radius: 3px 0 0 3px;
     right: 0; }
@@ -677,7 +685,7 @@ body {
   .trailer__materia {
     display: inline-block; }
     .trailer__materia:not(:last-child) {
-      margin-right: .5rem; }
+      margin-right: .8rem; }
     .trailer__materia--img {
       height: 25px;
       width: 25px;
