--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -89,6 +89,10 @@
         width: 100%;
         height: 100vh;
         overflow: hidden;
+
+        @include respond(tablet-portrait) {
+            display: none;
+        }
     }
 
     &__wave--1,
