--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -9,22 +9,24 @@
         position: fixed;
         top: 5.5rem;
         right: 2rem;
-        width: 6rem;
-        height: 6rem;
+        width: 5.5rem;
+        height: 5.5rem;
         z-index: 3000;
     }
 
     &__toggle {
-        position: fixed;
-        top: 6.7rem;
-        right: 3.5rem;
         text-align: center;
         text-shadow: 0px 2px 4px #000;
+        width: 19.5rem;
+        height: 7rem;
+        position: fixed;
+        top: 6.6rem;
+        right: -5.1rem;
         z-index: 4000;
 
         &--icon {
             cursor: pointer;
-            font-size: 3.3rem;
+            font-size: 3.2rem;
             transition: all .3s;
 
             &:hover {
